--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "express_server.js",
   "scripts": {
+    "start": "./node_modules/.bin/nodemon -L express_server.js",
     "test": "mocha"
   },
   "repository": {
@@ -23,5 +24,8 @@
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "mocha": "^6.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.1"
   }
 }
