--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
     "cookie-parser": "^1.4.4",
+    "cookie-session": "^1.3.3",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "mocha": "^6.2.0"
